pacman_demo/pacman-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: pacman
spec:
  tls:
    - hosts:
        - pacman.lab.qstetten.de
      secretName: pacman-cert
  rules:
    - host: "pacman.lab.qstetten.de"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: pacman
                port:
                  number: 80
